Add settings file

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 base="light"
-primaryColor="#0185fb"
-secondaryBackgroundColor="#edf5ff"
+primaryColor="#1c01fd"
+secondaryBackgroundColor="#ebecf1"
 textColor="#000000"
 font="sans serif"
