--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 base="light"
-primaryColor="#1c01fd"
+primaryColor="#0059FF"
 secondaryBackgroundColor="#ebecf1"
 textColor="#000000"
 font="sans serif"
