Test adding auth

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,7 +1,1 @@
-[connections.firestore]
-dialect = "postgresql"
-host = "localhost"
-port = "5432"
-database = "postgres"
-username = "postgres"
-password = "mysecretpassword"
+FIREBASE_WEB_API_KEY = "AIzaSyBHyrkks1UGb10PTioWCO_eOJtVYNX7PRk"
