--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,17 @@
 [server]
-port=8080
+port=8501
+maxUploadSize = 200
+maxMessageSize = 200
+
+[browser]
+serverAddress = "localhost"
+gatherUsageStats = false
+serverPort = 8501
+
+[logger]
+# Level of logging: 'error', 'warning', 'info', or 'debug'.
+level = "info"
+messageFormat = "%(asctime)s %(message)s"
 
 [theme]
 base="light"
