--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -72,7 +72,7 @@ jobs:
         with:
           token_format: 'access_token'
           workload_identity_provider: projects/776310175866/locations/global/workloadIdentityPools/github/providers/my-repo
-          service_account: perfin@perfin-db.iam.gserviceaccount.com
+          service_account: 103724361625100085823
 
       # NOTE: Alternative option - authentication via credentials json
       # - name: Google Auth
